0.0.1
-----

Just a first public release of the program.

1.0.0
-----

In this version I made a lot of fixes according to new users' comments. That's
great that so much people deceided to try my program. Here is the list of most
important things that were changed:

- Conflict of the symbol ustat in unistd.h (libc5) and the variable in
  centerICQ.cpp. Fixed. I renamed the variable to usrstat. Noticed by
  Bernhard Sadlowski <sadlowsk@mathematik.uni-bielefeld.de>

- Makefiles in ktools/src and center/ directories didn't work with GNU
  make 3.76 because it appeared to not understand rules like '.cpp.o:'.
  Fixed. All of such rules were changed to '%.o : %.cpp'

- Now centerICQ detects the socket physical disconnection. For example, in
  previous version if you were using Linux system at home and connecting it
  to internet with dial-up ppp account, centerICQ thought it's online even
  after you disconnect from the Internet
    
- Since this version all the outgoing messages are put into the
  center.<uin>.out files in the $(HOME)/.center directory
  
- Some user interface improvements
 
- A very funny bug was fixed. The point is that my ICQ UIN that was added to
  contact list when one started centerICQ for the first time, was a little
  bit incorrect (typing error), my real ICQ UIN is 17502151 :)

- New user registration feature was added

- Now centerICQ send the authorization acceptation immediately after
  receiving of the request from a Mirabilis client

- Now you can make centerICQ not check your mailbox adding 'dontcheckmail'
  parameter into the $(HOME)/.center/config file. Idea of Bernhard
  Sadlowski <sadlowsk@mathematik.uni-bielefeld.de> whose mailbox appeared
  to be too large for scanning every minute :)

- Since this day (1 aug 1999) you always can download the hottest and the
  _latest_ snapshot of the program from its homepage at
  http://konst-linux.i.am/

- CenterICQ now can update your details in the ICQ database
