@@ -3,3 +3,5 @@
 
 SUBDIRS = libgadu connwrap libjabber firetalk kkstrtext kksystr kkconsui libicq2000 libyahoo2 libmsn intl po misc share src
 EXTRA_DIST = config.rpath mkinstalldirs  POLICY centericq.1 centericq.motor FAQ NEWS TODO README THANKS AUTHORS INSTALL ABOUT-NLS ChangeLog COPYING centericq.spec
+
+ACLOCAL_AMFLAGS = -I m4
