@@ -2,7 +2,7 @@ INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/../kkstrtext -I$(top_srcdir)/
 noinst_LIBRARIES = libkkconsui.a
 EXTRA_DIST = config.guess config.sub
 SUBDIRS = include src
-CPPFLAGS = 
+AM_CPPFLAGS = 
 libkkconsui_a_SOURCES = 
 libkkconsui_a_LIBADD =  src/treeview.o src/colorschemer.o src/textinputline.o src/fileselector.o src/textwindow.o src/texteditor.o src/dialogbox.o src/screenarea.o src/textbrowser.o src/abstractui.o src/horizontalbar.o src/linkedlist.o src/cmenus.o src/conscommon.o
 AUTOMAKE_OPTIONS = foreign
