@@ -2,5 +2,5 @@ INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/../kkstrtext -I$(top_srcdir)/
 noinst_LIBRARIES = libsrc.a
 libsrc_a_SOURCES =  kkfsys.cc kkiproc.cc
 EXTRA_DIST = kkfsys.cc kkiproc.cc
-CPPFLAGS = 
+AM_CPPFLAGS = 
 SUBDIRS = 
