@@ -1,7 +1,7 @@
 EXTRA_DIST = libicq2000.motor NEWS TODO README THANKS AUTHORS INSTALL ChangeLog COPYING
 SUBDIRS = libicq2000 src
 INCLUDES = -I$(top_srcdir)/libicq2000
-CPPFLAGS = 
+AM_CPPFLAGS = 
 noinst_LIBRARIES = liblibicq2000.a
 liblibicq2000_a_SOURCES = 
 liblibicq2000_a_LIBADD =  src/ContactTree.o src/ContactList.o src/SNAC-MSG.o src/Translator.o src/SNAC-UIN.o src/MessageHandler.o src/SocketClient.o src/UserInfoBlock.o src/TLV.o src/SNAC.o src/version.o src/SNAC-BOS.o src/Xml.o src/SNAC-BUD.o src/exceptions.o src/Client.o src/Contact.o src/socket.o src/ICQ.o src/SNAC-SBL.o src/ICBMCookie.o src/time_extra.o src/DirectClient.o src/SNAC-base.o src/SNAC-LOC.o src/FileTransferClient.o src/buffer.o src/SMTPClient.o src/SNAC-SRV.o src/events.o src/SNAC-GEN.o src/Capabilities.o
