@@ -1,8 +1,8 @@
-INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/hooks -I/home/konst/devel/connwrap -I/home/konst/devel/firetalk -I/home/konst/devel/firetalk/../connwrap -I/home/konst/devel/firetalk/../connwrap-0.1 -I/home/konst/devel/kktoolbox/kkconsui -I/home/konst/devel/kktoolbox/kkconsui/include -I/home/konst/devel/kktoolbox/kkconsui/../kkstrtext -I/home/konst/devel/kktoolbox/kkconsui/../kkstrtext-0.1 -I/home/konst/devel/kktoolbox/kkstrtext -I/home/konst/devel/kktoolbox/kksystr -I/home/konst/devel/kktoolbox/kksystr/include -I/home/konst/devel/kktoolbox/kksystr/../kkstrtext -I/home/konst/devel/kktoolbox/kksystr/../kkstrtext-0.1 -I/home/konst/devel/libgadu -I/home/konst/devel/libicq2000 -I/home/konst/devel/libicq2000/libicq2000 -I/home/konst/devel/libjabber -I/home/konst/devel/libjabber/../connwrap -I/home/konst/devel/libjabber/../connwrap-0.1 -I/home/konst/devel/libmsn -I/home/konst/devel/libmsn/../connwrap -I/home/konst/devel/libmsn/../connwrap-0.1 -I/home/konst/devel/libyahoo2 -I/home/konst/devel/libyahoo2/../connwrap -I/home/konst/devel/libyahoo2/../connwrap-0.1 -I$(top_srcdir)/intl
+INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/hooks -I$(top_srcdir)/connwrap -I$(top_srcdir)/firetalk -I$(top_srcdir)/firetalk/../connwrap -I$(top_srcdir)/firetalk/../connwrap-0.1 -I$(top_srcdir)/kkconsui -I$(top_srcdir)/kkconsui/include -I$(top_srcdir)/kkconsui/../kkstrtext -I$(top_srcdir)/kkconsui/../kkstrtext-0.1 -I$(top_srcdir)/kkstrtext -I$(top_srcdir)/kksystr -I$(top_srcdir)/kksystr/include -I$(top_srcdir)/kksystr/../kkstrtext -I$(top_srcdir)/kksystr/../kkstrtext-0.1 -I$(top_srcdir)/libgadu -I$(top_srcdir)/libicq2000 -I$(top_srcdir)/libicq2000/libicq2000 -I$(top_srcdir)/libjabber -I$(top_srcdir)/libjabber/../connwrap -I$(top_srcdir)/libjabber/../connwrap-0.1 -I$(top_srcdir)/libmsn -I$(top_srcdir)/libmsn/../connwrap -I$(top_srcdir)/libmsn/../connwrap-0.1 -I$(top_srcdir)/libyahoo2 -I$(top_srcdir)/libyahoo2/../connwrap -I$(top_srcdir)/libyahoo2/../connwrap-0.1 -I$(top_srcdir)/intl
 bin_PROGRAMS = centericq
 centericq_SOURCES = centericq.cc icqcontact.cc icqgroups.cc eventmanager.cc icqdialogs.cc icqhist.cc imexternal.cc imcontact.cc imlogger.cc accountmanager.cc icqcontacts.cc icqmlist.cc imcontroller.cc icqconf.cc imevents.cc impgp.cc icqface.cc centermain.cc icqgroup.cc
-centericq_LDFLAGS = -L/home/konst/devel/connwrap -L/home/konst/devel/firetalk -L/home/konst/devel/kktoolbox/kkconsui -L/home/konst/devel/kktoolbox/kkstrtext -L/home/konst/devel/kktoolbox/kksystr -L/home/konst/devel/libgadu -L/home/konst/devel/libicq2000 -L/home/konst/devel/libjabber -L/home/konst/devel/libmsn -L/home/konst/devel/libyahoo2
-centericq_LDADD = $(top_srcdir)/src/hooks/libhooks.a  -lconnwrap -lfiretalk -lkkconsui -lkkstrtext -lkksystr -llibgadu -llibicq2000 -llibjabber -llibmsn -llibyahoo2 @INTLLIBS@
+centericq_LDFLAGS = -L$(top_srcdir)/connwrap -L$(top_srcdir)/firetalk -L$(top_srcdir)/kkconsui -L$(top_srcdir)/kkstrtext -L$(top_srcdir)/kksystr -L$(top_srcdir)/libgadu -L$(top_srcdir)/libicq2000 -L$(top_srcdir)/libjabber -L$(top_srcdir)/libmsn -L$(top_srcdir)/libyahoo2
+centericq_LDADD = $(top_srcdir)/src/hooks/libhooks.a  -lconnwrap -lfiretalk -lkkconsui -lkkstrtext -lkksystr -llibgadu -llibicq2000 -llibjabber -llibmsn -llibyahoo2 @LTLIBINTL@
 SUBDIRS = hooks
 EXTRA_DIST = centericq.cc icqcontact.cc icqgroups.cc eventmanager.cc icqdialogs.cc icqhist.cc imexternal.cc imcontact.cc imlogger.cc accountmanager.cc icqcontacts.cc icqmlist.cc imcontroller.cc icqconf.cc imevents.cc impgp.cc icqface.cc centermain.cc icqgroup.cc icqmlist.h imcontroller.h icqcommon.h icqcontacts.h centericq.h icqgroup.h imcontact.h accountmanager.h eventmanager.h imevents.h icqcontact.h imlogger.h icqconf.h impgp.h icqface.h icqgroups.h icqhist.h imexternal.h
 AUTOMAKE_OPTIONS = foreign
