@@ -1,4 +1,4 @@
-INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/hooks -I/home/konst/devel/connwrap -I/home/konst/devel/firetalk -I/home/konst/devel/firetalk/../connwrap -I/home/konst/devel/firetalk/../connwrap-0.1 -I/home/konst/devel/kktoolbox/kkconsui -I/home/konst/devel/kktoolbox/kkconsui/include -I/home/konst/devel/kktoolbox/kkconsui/../kkstrtext -I/home/konst/devel/kktoolbox/kkconsui/../kkstrtext-0.1 -I/home/konst/devel/kktoolbox/kkstrtext -I/home/konst/devel/kktoolbox/kksystr -I/home/konst/devel/kktoolbox/kksystr/include -I/home/konst/devel/kktoolbox/kksystr/../kkstrtext -I/home/konst/devel/kktoolbox/kksystr/../kkstrtext-0.1 -I/home/konst/devel/libgadu -I/home/konst/devel/libicq2000 -I/home/konst/devel/libicq2000/libicq2000 -I/home/konst/devel/libjabber -I/home/konst/devel/libjabber/../connwrap -I/home/konst/devel/libjabber/../connwrap-0.1 -I/home/konst/devel/libmsn -I/home/konst/devel/libmsn/../connwrap -I/home/konst/devel/libmsn/../connwrap-0.1 -I/home/konst/devel/libyahoo2 -I/home/konst/devel/libyahoo2/../connwrap -I/home/konst/devel/libyahoo2/../connwrap-0.1 -I$(top_srcdir)/intl
+INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/hooks -I$(top_srcdir)/connwrap -I$(top_srcdir)/firetalk -I$(top_srcdir)/firetalk/../connwrap -I$(top_srcdir)/firetalk/../connwrap-0.1 -I$(top_srcdir)/kkconsui -I$(top_srcdir)/kkconsui/include -I$(top_srcdir)/kkconsui/../kkstrtext -I$(top_srcdir)/kkconsui/../kkstrtext-0.1 -I$(top_srcdir)/kkstrtext -I$(top_srcdir)/kksystr -I$(top_srcdir)/kksystr/include -I$(top_srcdir)/kksystr/../kkstrtext -I$(top_srcdir)/kksystr/../kkstrtext-0.1 -I$(top_srcdir)/libgadu -I$(top_srcdir)/libicq2000 -I$(top_srcdir)/libicq2000/libicq2000 -I$(top_srcdir)/libjabber -I$(top_srcdir)/libjabber/../connwrap -I$(top_srcdir)/libjabber/../connwrap-0.1 -I$(top_srcdir)/libmsn -I$(top_srcdir)/libmsn/../connwrap -I$(top_srcdir)/libmsn/../connwrap-0.1 -I$(top_srcdir)/libyahoo2 -I$(top_srcdir)/libyahoo2/../connwrap -I$(top_srcdir)/libyahoo2/../connwrap-0.1 -I$(top_srcdir)/intl
 noinst_LIBRARIES = libhooks.a
 libhooks_a_SOURCES = rsshook.cc HTTPClient.cc yahoohook.cc jabberhook.cc aimhook.cc icqhook.cc gaduhook.cc irchook.cc ljhook.cc msnhook.cc abstracthook.cc
 EXTRA_DIST = rsshook.cc HTTPClient.cc yahoohook.cc jabberhook.cc aimhook.cc icqhook.cc gaduhook.cc irchook.cc ljhook.cc msnhook.cc abstracthook.cc ljhook.h rsshook.h HTTPClient.h yahoohook.h aimhook.h msnhook.h jabberhook.h gaduhook.h icqhook.h irchook.h abstracthook.h
