@@ -1,3 +1,14 @@
+2006-12-22  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.in.in: New file, from gettext-0.16.1.
+	* boldquot.sed: New file, from gettext-0.16.1.
+	* en@boldquot.header: New file, from gettext-0.16.1.
+	* en@quot.header: New file, from gettext-0.16.1.
+	* insert-header.sin: New file, from gettext-0.16.1.
+	* quot.sed: New file, from gettext-0.16.1.
+	* remove-potcdate.sin: New file, from gettext-0.16.1.
+	* Rules-quot: New file, from gettext-0.16.1.
+
 2004-06-02  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Makefile.in.in: Upgrade to gettext-0.12.1.
